# agent-handoff

./: Cargo.toml  LICENSE  README.md
scripts/: install.sh
src/: format.rs  main.rs  model.rs  util.rs
src/adapters/: claude.rs  codex.rs  cursor.rs  devin.rs  mod.rs  opencode.rs
tests/fixtures/claude/: sample.jsonl
tests/fixtures/codex/: sample.jsonl
tests/fixtures/cursor/: sample.jsonl
