[package]
name = "agent-handoff"
version = "0.1.0"
edition = "2021"
description = "Extract conversation transcripts from local AI coding agent logs (Claude Code, Codex, OpenCode, Cursor) — no LLM, pure file parsing."
license = "MIT"
repository = "https://github.com/LivioGama/agent-handoff"

[[bin]]
name = "agent-handoff"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
chrono = "0.4"
walkdir = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
